--- a/templates/index.html
+++ b/templates/index.html
@@ -7,3 +7,12 @@
 
 
 {% block navbar_main %}class="active"{% endblock navbar_main %}
+
+{% block content %}
+
+О Внуковой Светлане<br>
+Каталог для скачивания<br>
+Случайная статья, случайные товары<br>
+Как заказать(Условия заказа/доставки)<br>
+pomidom.ru lazareva.info
+{% endblock %}
