--- a/static/css/style.css
+++ b/static/css/style.css
@@ -30,6 +30,7 @@
 body
 {
 	background-image: url(/static/images/bg.jpg);
+	background-size: 100%;
 }
 .catalogue_image {
 	border-radius:15px;
@@ -40,8 +41,9 @@ body
 	margin: auto;
 }
 .catalogue_list td {
-	border: 1px solid grey;
+
 	padding: 3px;
+	text-align: center;
 }
 .blog_list{
 	margin:auto;
@@ -58,7 +60,7 @@ body
 	margin: left;
 	padding: 3px;
 	text-align:left;
-	width:70%;
+	width:540px;
 	border: 1px solid white;
 
 }
@@ -82,4 +84,32 @@ body
 	text-align: right;
 	border: 1px solid white;
 
+}
+.cart {
+	margin:left;
+	width: 65%;
+	border: 1px solid white;
+	
+}
+.cart thead {
+	background-color: 
+}
+
+.cat {
+	display: inline-block;
+	padding-right: 10px;
+}
+
+.container {
+	width: 95%
+}
+.listdiv {
+	float:center;
+}
+
+.detail-view input {
+	width:50px;
+}
+#to-cart {
+	width:120px;
 }
