--- a/templates/catalogue/detail.html
+++ b/templates/catalogue/detail.html
@@ -3,33 +3,48 @@
 {% load staticfiles %}
 
 
-{% block title %}{{ name }}{% endblock title %}
+{% block title %}{{ item.name }}{% endblock title %}
 
 {% block navbar_catalogue %}class="active"{% endblock navbar_catalogue %}
 
 {% block content %}
-<div class="container">
-<div class="jumbotron">
-
-<h2>{{ name }}</h2>
+<h2>{{ item.name }}</h2>
 <table class="detail-view table-striped">
-<tr><td rowspan="5"><img class = "table-image" src="/{{ imagename }}" alt= "{{ name }}"/></td><td class="detail-table-header">Категория:</td>
+<tr><td rowspan="6"><img class = "table-image" src="/{{ item.imagename }}" alt= "{{ item.name }}"/></td><td class="detail-table-header">Категория:</td>
 
-{% if section == "T" %}<td>Томаты</td>
-{% elif section == "V" %}<td>Овощи</td>
+{% if item.section == "T" %}<td>Томаты</td>
+{% elif item.section == "V" %}<td>Овощи</td>
 {% else %} <td>Декоративные</td>
 {% endif %}
 </tr>
 <tr><td class="detail-table-header">Тип:</td>
-{% if extra == "ind" %}<td> Индетерминантные</td>
-{% elif extra == "pid"%}<td> Полуиндетерминантные</td>
+{% if item.extra == "ind" %}<td> Индетерминантные</td>
+{% elif item.extra == "pid"%}<td> Полуиндетерминантные</td>
 {% else %}<td> Детерминантные</td>
 {% endif %}	
 </tr>
-<tr><td class="detail-table-header">Цена:</td><td>{{ price }}</td></tr>
-<tr><td class="detail-table-header">Описание:</td><td>{{ description }}</td></tr>
+<tr><td class="detail-table-header">Цена:</td><td>{{ item.price }}</td></tr>
+<tr><td class="detail-table-header">Описание:</td><td>{{ item.description }}</td></tr>
+<tr>
+  <td class="detail-table-header">
+	<form action="{% url 'add_to_card' item.id %}"method="POST">
+    Quantity</td>
+</div>
+    {% csrf_token %}
+<div class="small-9 columns">
+<td>{{ cart_add_form.quantity }}
+</div>
+</div>
+<input type="submit" id="to-cart" value="В корзину">
+</td></form></td></tr>
 </table>
-
+    
+<div class="cb"></div> 
+{% for each in randomitem %}
+<div class="cat"><table class="catalogue_list"><tr><td><img class = "catalogue_image" src="/{{ each.imagename }}" alt= "{{ each.name }}"/></td></tr>
+<tr><td><a href = "{%url 'detail_view' each.id %}">{{ each.name }}</a></td></tr>
+<tr><td>{{ each.description|truncatechars:80 }}</td></tr>
+<tr><td>{{ each.price }}</td></tr></table>
 </div>
-</div>
+{% endfor %}
 {% endblock content %}
